# loam

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vitest.config.ts
.claude/agents/: loam-reviewer.md
.claude/commands/: loam-check.md  loam-module.md  loam-next-plan.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
docs/: WORKFLOW.md
docs/superpowers/plans/: 2026-04-17-m1-tauri-shell-storage.md
docs/superpowers/specs/: 2026-04-17-loam-design.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: db.rs  entries.rs  error.rs  lib.rs  main.rs  paths.rs  settings.rs
src/lib/: commands.ts  entry-store.ts  settings.ts  types.ts
src/lib/__tests__/: canary.test.ts  commands.test.ts  entry-store.test.ts  settings.test.ts
